<resources>
    <string name="app_name">Project 0</string>
    <string name="action_settings">Settings</string>
    <string name="title">My App Portfolio</string>
    <string name="project1">Spotify Streamer</string>
    <string name="project2">Scores App</string>
    <string name="project3">Library App</string>
    <string name="project4">Build It Bigger</string>
    <string name="project5">Xyz Reader</string>
    <string name="project6">Capstone: My Own Work!</string>
    <string name="toaststr">This button wil launch my</string>
</resources>
