<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/backgroundColor">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/textColor" />

    <Button
        style="@style/Button.Orange"
        android:text="@string/project1"
        android:id="@+id/button_popmov"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/title"
        android:layout_alignLeft="@+id/button_duo1"
        android:layout_alignStart="@+id/button_duo1"
        android:onClick="displayToast" />

    <Button
        style="@style/Button.Orange"
        android:id="@+id/button_duo1"
        android:text="@string/project2"
        android:layout_below="@+id/button_popmov"
        android:onClick="displayToast" />

    <Button
        style="@style/Button.Orange"
        android:text="@string/project3"
        android:id="@+id/button_duo2"
        android:layout_below="@+id/button_duo1"
        android:onClick="displayToast" />

    <Button
        style="@style/Button.Orange"
        android:text="@string/project4"
        android:id="@+id/button_bigger"
        android:layout_below="@+id/button_duo2"
        android:onClick="displayToast" />

    <Button
        style="@style/Button.Orange"
        android:text="@string/project5"
        android:id="@+id/button_bacon"
        android:layout_below="@+id/button_bigger"
        android:layout_alignLeft="@+id/button_bigger"
        android:layout_alignStart="@+id/button_bigger"
        android:onClick="displayToast" />

    <Button
        style="@style/Button.Red"
        android:text="@string/project6"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_bacon"
        android:layout_alignLeft="@+id/button_bacon"
        android:layout_alignStart="@+id/button_bacon"
        android:onClick="displayToast" />
</RelativeLayout>